# hakoniwa-code-runner

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
.devcontainer/: Dockerfile  app.toml
.devcontainer/lang-c/: config.toml  dockerbuild.sh  executebox.toml  install.sh
.devcontainer/lang-cpp/: compilebox.toml  config.toml  executebox.toml
.devcontainer/lang-d/: compilebox.toml  config.toml  dockerbuild.sh  executebox.toml
.devcontainer/lang-erlang/: compilebox.toml  config.toml  dockerbuild.sh  executebox.toml  install.sh
.devcontainer/lang-go/: compilebox.toml  config.toml  dockerbuild.sh  executebox.toml
.devcontainer/lang-haskell/: compilebox.toml  config.toml  dockerbuild.sh  executebox.toml  install.sh
.devcontainer/lang-java/: compilebox.toml  config.toml  dockerbuild.sh  executebox.toml  install.sh
.devcontainer/lang-javascript/: config.toml  dockerbuild.sh  executebox.toml
.devcontainer/lang-python/: config.toml  dockerbuild.sh  executebox.toml
.devcontainer/lang-ruby/: config.toml  dockerbuild.sh  executebox.toml  install.sh
.devcontainer/lang-rust/: compilebox.toml  config.toml  dockerbuild.sh  executebox.toml  install.sh
.devcontainer/lang-scala/: compilebox.toml  config.toml  dockerbuild.sh  executebox.toml
.devcontainer/lang-typescript/: compilebox.toml  config.toml  dockerbuild.sh  executebox.toml
.devcontainer/shared/: compilebox.toml  executebox.env.toml  executebox.limits.exclude_as.toml  executebox.limits.toml  executebox.seccomp.syscalls.toml
.github/workflows/: ci.yml
examples/deploy-on-docker-container/: Dockerfile  README.md  app.toml  lang-c-compilebox.toml
examples/deploy-on-host-os/: README.md  app.toml
examples/run-server-inside-docker-container/: README.md  app.toml  lang-c-executebox.toml
examples/run-server-inside-docker-container-multiple-programming-languages/: Dockerfile  README.md  app.toml
examples/run-server-on-host/: README.md  app.toml
protos/: languages.proto  runs.proto
protos/shared/: language.proto
scripts/: README.md  dockerbuild.sh  install-erlang.sh  install-go.sh  install-nodejs.sh  install-openjdk.sh  install-python.sh  install-ruby.sh  install.sh
src/: app.rs  config.rs  executor.rs  lib.rs  main.rs  pb.rs
src/cli/: mod.rs  root.rs  start.rs
src/contrib/: fs.rs  handlebars.rs  mod.rs  str.rs
src/embed/: Dockerfile  Dockerfile.build  app.toml
tests/: executor_test.rs
(+81 files in other folders)
