[package]
name = "hakoniwa-code-runner"
version = "0.1.0"
description = "Run code snippets in a variety of languages over network."
keywords = ["code-execution", "code-runner"]
homepage = "https://github.com/souk4711/hakoniwa-code-runner"
repository = "https://github.com/souk4711/hakoniwa-code-runner"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
chrono = "0.4.22"
clap = { version = "3.2.13", features = ["derive"] }
fastrand = "1.8.0"
hakoniwa = "0.4.4"
handlebars = "4.3.3"
lazy_static = "1.4.0"
log = "0.4.17"
prost = "0.11.0"
prost-build = "0.11.1"
rust-embed = "6.4.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_variant = "0.1.1"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "signal"] }
toml = "0.5.9"
tonic = "0.8.0"
tonic-reflection = "0.5.0"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

[build-dependencies]
prost-build = "0.11.1"
tonic-build = "0.8.0"
